[gd_scene load_steps=10 format=3 uid="uid://c0erw0ltjwxou"]

[ext_resource type="Script" uid="uid://c2pwx8cuwgc6m" path="res://entities/allies/buildings/turret.gd" id="1_l4m5c"]
[ext_resource type="Texture2D" uid="uid://qf50deb2r7ts" path="res://maps/buildings.png" id="2_l4m5c"]
[ext_resource type="Script" uid="uid://bh6cqtnko4j6x" path="res://components/attack_component.gd" id="3_rdlu1"]
[ext_resource type="Script" uid="uid://baxyjmy63ctfl" path="res://components/resources/damage.gd" id="4_b3pvo"]
[ext_resource type="Script" uid="uid://d2odt5s6rdu5a" path="res://components/projectile_spawner.gd" id="5_2b1h6"]
[ext_resource type="PackedScene" uid="uid://bwdgm3g1m85m7" path="res://entities/projectiles/basic_projectile.tscn" id="6_nkhix"]
[ext_resource type="Script" uid="uid://b74u2q5wpnbt8" path="res://components/targeting_component.gd" id="8_2mib4"]

[sub_resource type="Resource" id="Resource_atgc0"]
script = ExtResource("4_b3pvo")
value = 1
source = 0
metadata/_custom_type_script = "uid://d04s5a06kemh"

[sub_resource type="CircleShape2D" id="CircleShape2D_atgc0"]
radius = 192.0

[node name="Turret" type="CharacterBody2D"]
script = ExtResource("1_l4m5c")
metadata/_custom_type_script = "uid://cet8l1dt55dva"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_l4m5c")
region_enabled = true
region_rect = Rect2(0, 0, 32, 47)

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("3_rdlu1")
DamageComp = SubResource("Resource_atgc0")
metadata/_custom_type_script = "uid://bh6cqtnko4j6x"

[node name="ProjectileSpawner" type="Marker2D" parent="."]
script = ExtResource("5_2b1h6")
projectile_scene = ExtResource("6_nkhix")
metadata/_custom_type_script = "uid://d2odt5s6rdu5a"

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0

[node name="Line2D2" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0.8, 0, 1, 1)

[node name="TargetingComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("8_2mib4")
faction_target = 2
filters = Array[int]([0])
metadata/_custom_type_script = "uid://b74u2q5wpnbt8"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetingComponent"]
shape = SubResource("CircleShape2D_atgc0")
